fixed zone names alignment

--- a/style.css
+++ b/style.css
@@ -19,9 +19,15 @@ section {
   justify-content: center;
 }
 
-.title{
+header{
+    height: 12vh;
     color: gold;
     font-size: 20px;
+}
+
+.time-zones{
+    display: flex;
+    justify-content: space-around;
 }
 
 .clocks {
@@ -90,12 +96,4 @@ section {
   width: 6%;
   border-radius: 50%;
   background: gold;
-}
-
-.timeZone{
-    position: absolute;
-    font-size: 20px;
-    color: gold;
-    top:10%;
-    padding-left: 4%;
 }
